랜딩페이지 정보 관련 API 반영